<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Detail.DetailUser">

    <RelativeLayout
        android:id="@+id/lydprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">

        <ImageView
            android:id="@+id/imgdetail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/photodetail"
            tools:src="@drawable/user1" />

        <TextView
            android:id="@+id/tvdname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgdetail"
            android:layout_marginTop="25dp"
            tools:text="@string/Name"
            tools:textSize="20sp"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/tvduname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvdname"
            android:layout_marginTop="5dp"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tvdlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvduname"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_outline_location_on_16"
            tools:text="@string/location" />

        <TextView
            android:id="@+id/tvdcompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvduname"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/tvdlocation"
            android:drawableLeft="@drawable/ic_baseline_domain_16"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/tvdrepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvdcompany"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_baseline_collections_bookmark_16"
            tools:text="@string/repo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lydmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lydprofile"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsfollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpfollow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:id="@+id/vdline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/lydmenu"
        android:background="@android:color/darker_gray" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:id="@+id/pgdetail"/>
</RelativeLayout>